adjusting batch worker