@@ -9,23 +9,22 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.LinkedBlockingQueue;
 
 public class BookService {
+    public static final int BATCH_WORKERS = 2;
     private final BlockingQueue<Book> writeQueue = new LinkedBlockingQueue<>(10_000);
-    /*private final ExecutorService workerExecutor = Executors.newSingleThreadExecutor(
-            Thread.ofVirtual()
-                    .name("workerVthread-", 0)
-                    .factory()
-    );*/
 
     private final BookRepositoryWithCache repository;
 
     public BookService(BookRepositoryWithCache repository) {
         this.repository = repository;
-        for (int i = 0; i < 10; i++) {
-            Thread.ofVirtual()
-                    .name("workerVthread-", i)
-                    .start(new BatchWriteWorker(writeQueue, repository));
+        for (int i = 0; i < BATCH_WORKERS; i++) {
+            ExecutorService batchExecutor = Executors.newFixedThreadPool(
+                    BATCH_WORKERS,
+                    Thread.ofVirtual()
+                            .name("batchWorkerVthread-", 0)
+                            .factory()
+            );
+            batchExecutor.submit(new BatchWriteWorker(writeQueue, repository));
         }
-        //this.workerExecutor.submit(new BatchWriteWorker(writeQueue, repository));
     }
 
     public void save(Book book) {
